--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true, 
     "sourceMap": true, 
     "outDir": "./dist",
-    "rootDir": "./lib",
+    "rootDir": "src",
     "strict": true,
     "noImplicitThis": false,
     "esModuleInterop": true
